# duplicate_finder

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hashing.rs  lib.rs  main.rs  media.rs  model.rs  present.rs  scanner.rs
ui/: app.js  index.html  styles.css
