[package]
name = "duplicate_finder"
version = "0.5.0"
description = "Find duplicate and likely-duplicate files, including media matched by duration"
edition = "2021"
license = "MIT"
[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
blake3 = "1.8.5"
rayon = "1.12.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-opener = "2.5.4"
trash = "5.2.6"
walkdir = "2.5.0"
